include/bgfx/c99/bgfx.h

/**
 * Access mode enum.
 *
 */
typedef enum bgfx_access
{
    BGFX_ACCESS_READ,                         /** ( 0) Read.                          */
    BGFX_ACCESS_WRITE,                        /** ( 1) Write.                         */
    BGFX_ACCESS_READWRITE,                    /** ( 2) Read and write.                */

    BGFX_ACCESS_COUNT

} bgfx_access_t;
/**
 * Texture format enum.
 *
 * Notation:
 *
 *       RGBA16S
 *       ^   ^ ^
 *       |   | +-- [ ]Unorm
 *       |   |     [F]loat
 *       |   |     [S]norm
 *       |   |     [I]nt
 *       |   |     [U]int
 *       |   +---- Number of bits per component
 *       +-------- Components
 *
 * @attention Availability depends on Caps (see: formats).
 *
 */
typedef enum bgfx_texture_format
{
    BGFX_TEXTURE_FORMAT_BC1,                  /** ( 0) Block Compression 1. 5-bit R, 6-bit G, 5-bit B, 1-bit A. 4 BPP. */
    BGFX_TEXTURE_FORMAT_BC2,                  /** ( 1) Block Compression 2. 5-bit R, 6-bit G, 5-bit B, 4-bit explicit A. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC3,                  /** ( 2) Block Compression 3. 5-bit R, 6-bit G, 5-bit B, 8-bit interpolated A. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC4,                  /** ( 3) Block Compression 4. Single 8-bit red channel, unsigned normalized. 4 BPP. */
    BGFX_TEXTURE_FORMAT_BC4S,                 /** ( 4) Block Compression 4. Single 8-bit red channel, signed normalized. 4 BPP. */
    BGFX_TEXTURE_FORMAT_BC5,                  /** ( 5) Block Compression 5. Two 8-bit channels (RG), unsigned normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC5S,                 /** ( 6) Block Compression 5. Two 8-bit channels (RG), signed normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC6H,                 /** ( 7) Block Compression 6H. Three 16-bit floating-point channels (RGB), HDR. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC6HU,                /** ( 8) Block Compression 6H. Three 16-bit unsigned floating-point channels (RGB), HDR. 8 BPP. */
    BGFX_TEXTURE_FORMAT_BC7,                  /** ( 9) RGB 4-7 bits per color channel, 0-8 bits alpha. Block Compression 7. High-quality RGBA, 4-7 bits per color, 0-8 bits alpha. 8 BPP. */
    BGFX_TEXTURE_FORMAT_ETC1,                 /** (10) Ericsson Texture Compression 1. 8-bit per channel RGB. 4 BPP. */
    BGFX_TEXTURE_FORMAT_ETC2,                 /** (11) Ericsson Texture Compression 2. 8-bit per channel RGB. 4 BPP. */
    BGFX_TEXTURE_FORMAT_ETC2A,                /** (12) Ericsson Texture Compression 2 with full alpha. 8-bit per channel RGBA. 8 BPP. */
    BGFX_TEXTURE_FORMAT_ETC2A1,               /** (13) Ericsson Texture Compression 2 with 1-bit punch-through alpha. 4 BPP. */
    BGFX_TEXTURE_FORMAT_EACR11,               /** (14) ETC2 Alpha Compression, single 11-bit red channel, unsigned normalized. 4 BPP. */
    BGFX_TEXTURE_FORMAT_EACR11S,              /** (15) ETC2 Alpha Compression, single 11-bit red channel, signed normalized. 4 BPP. */
    BGFX_TEXTURE_FORMAT_EACRG11,              /** (16) ETC2 Alpha Compression, two 11-bit channels (RG), unsigned normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_EACRG11S,             /** (17) ETC2 Alpha Compression, two 11-bit channels (RG), signed normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_PTC12,                /** (18) PowerVR Texture Compression v1. 3-channel RGB. 2 BPP. */
    BGFX_TEXTURE_FORMAT_PTC14,                /** (19) PowerVR Texture Compression v1. 3-channel RGB. 4 BPP. */
    BGFX_TEXTURE_FORMAT_PTC12A,               /** (20) PowerVR Texture Compression v1. 4-channel RGBA. 2 BPP. */
    BGFX_TEXTURE_FORMAT_PTC14A,               /** (21) PowerVR Texture Compression v1. 4-channel RGBA. 4 BPP. */
    BGFX_TEXTURE_FORMAT_PTC22,                /** (22) PowerVR Texture Compression v2. 4-channel RGBA. 2 BPP. */
    BGFX_TEXTURE_FORMAT_PTC24,                /** (23) PowerVR Texture Compression v2. 4-channel RGBA. 4 BPP. */
    BGFX_TEXTURE_FORMAT_ATC,                  /** (24) AMD Texture Compression. 3-channel RGB. 4 BPP. */
    BGFX_TEXTURE_FORMAT_ATCE,                 /** (25) AMD Texture Compression with explicit alpha. 4-channel RGBA. 8 BPP. */
    BGFX_TEXTURE_FORMAT_ATCI,                 /** (26) AMD Texture Compression with interpolated alpha. 4-channel RGBA. 8 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC4X4,              /** (27) Adaptive Scalable Texture Compression, 4x4 block, RGBA. 8.00 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC5X4,              /** (28) Adaptive Scalable Texture Compression, 5x4 block, RGBA. 6.40 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC5X5,              /** (29) Adaptive Scalable Texture Compression, 5x5 block, RGBA. 5.12 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC6X5,              /** (30) Adaptive Scalable Texture Compression, 6x5 block, RGBA. 4.27 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC6X6,              /** (31) Adaptive Scalable Texture Compression, 6x6 block, RGBA. 3.56 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC8X5,              /** (32) Adaptive Scalable Texture Compression, 8x5 block, RGBA. 3.20 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC8X6,              /** (33) Adaptive Scalable Texture Compression, 8x6 block, RGBA. 2.67 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC8X8,              /** (34) Adaptive Scalable Texture Compression, 8x8 block, RGBA. 2.00 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC10X5,             /** (35) Adaptive Scalable Texture Compression, 10x5 block, RGBA. 2.56 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC10X6,             /** (36) Adaptive Scalable Texture Compression, 10x6 block, RGBA. 2.13 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC10X8,             /** (37) Adaptive Scalable Texture Compression, 10x8 block, RGBA. 1.60 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC10X10,            /** (38) Adaptive Scalable Texture Compression, 10x10 block, RGBA. 1.28 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC12X10,            /** (39) Adaptive Scalable Texture Compression, 12x10 block, RGBA. 1.07 BPP. */
    BGFX_TEXTURE_FORMAT_ASTC12X12,            /** (40) Adaptive Scalable Texture Compression, 12x12 block, RGBA. 0.89 BPP. */
    BGFX_TEXTURE_FORMAT_UNKNOWN,              /** (41) Compressed formats above.      */
    BGFX_TEXTURE_FORMAT_R1,                   /** (42) 1-bit single-channel red. Monochrome, 1-bit per pixel. 1 BPP. */
    BGFX_TEXTURE_FORMAT_A8,                   /** (43) 8-bit single-channel alpha, unsigned normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_R8,                   /** (44) 8-bit single-channel red, unsigned normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_R8I,                  /** (45) 8-bit single-channel red, signed integer. 8 BPP. */
    BGFX_TEXTURE_FORMAT_R8U,                  /** (46) 8-bit single-channel red, unsigned integer. 8 BPP. */
    BGFX_TEXTURE_FORMAT_R8S,                  /** (47) 8-bit single-channel red, signed normalized. 8 BPP. */
    BGFX_TEXTURE_FORMAT_R16,                  /** (48) 16-bit single-channel red, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R16I,                 /** (49) 16-bit single-channel red, signed integer. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R16U,                 /** (50) 16-bit single-channel red, unsigned integer. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R16F,                 /** (51) 16-bit single-channel red, half-precision floating point. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R16S,                 /** (52) 16-bit single-channel red, signed normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R32I,                 /** (53) 32-bit single-channel red, signed integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_R32U,                 /** (54) 32-bit single-channel red, unsigned integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_R32F,                 /** (55) 32-bit single-channel red, full-precision floating point. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG8,                  /** (56) Two 8-bit channels (red, green), unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RG8I,                 /** (57) Two 8-bit channels (red, green), signed integer. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RG8U,                 /** (58) Two 8-bit channels (red, green), unsigned integer. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RG8S,                 /** (59) Two 8-bit channels (red, green), signed normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RG16,                 /** (60) Two 16-bit channels (red, green), unsigned normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG16I,                /** (61) Two 16-bit channels (red, green), signed integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG16U,                /** (62) Two 16-bit channels (red, green), unsigned integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG16F,                /** (63) Two 16-bit channels (red, green), half-precision floating point. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG16S,                /** (64) Two 16-bit channels (red, green), signed normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG32I,                /** (65) Two 32-bit channels (red, green), signed integer. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RG32U,                /** (66) Two 32-bit channels (red, green), unsigned integer. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RG32F,                /** (67) Two 32-bit channels (red, green), full-precision floating point. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGB8,                 /** (68) Three 8-bit channels (red, green, blue), unsigned normalized. 24 BPP. */
    BGFX_TEXTURE_FORMAT_RGB8I,                /** (69) Three 8-bit channels (red, green, blue), signed integer. 24 BPP. */
    BGFX_TEXTURE_FORMAT_RGB8U,                /** (70) Three 8-bit channels (red, green, blue), unsigned integer. 24 BPP. */
    BGFX_TEXTURE_FORMAT_RGB8S,                /** (71) Three 8-bit channels (red, green, blue), signed normalized. 24 BPP. */
    BGFX_TEXTURE_FORMAT_RGB9E5F,              /** (72) Shared-exponent RGB. 9 bits per RGB channel with a shared 5-bit exponent, floating point. 32 BPP. */
    BGFX_TEXTURE_FORMAT_BGRA8,                /** (73) Four 8-bit channels (blue, green, red, alpha), unsigned normalized. BGRA byte order. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA8,                /** (74) Four 8-bit channels (red, green, blue, alpha), unsigned normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA8I,               /** (75) Four 8-bit channels (red, green, blue, alpha), signed integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA8U,               /** (76) Four 8-bit channels (red, green, blue, alpha), unsigned integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA8S,               /** (77) Four 8-bit channels (red, green, blue, alpha), signed normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA16,               /** (78) Four 16-bit channels (red, green, blue, alpha), unsigned normalized. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA16I,              /** (79) Four 16-bit channels (red, green, blue, alpha), signed integer. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA16U,              /** (80) Four 16-bit channels (red, green, blue, alpha), unsigned integer. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA16F,              /** (81) Four 16-bit channels (red, green, blue, alpha), half-precision floating point. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA16S,              /** (82) Four 16-bit channels (red, green, blue, alpha), signed normalized. 64 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA32I,              /** (83) Four 32-bit channels (red, green, blue, alpha), signed integer. 128 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA32U,              /** (84) Four 32-bit channels (red, green, blue, alpha), unsigned integer. 128 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA32F,              /** (85) Four 32-bit channels (red, green, blue, alpha), full-precision floating point. 128 BPP. */
    BGFX_TEXTURE_FORMAT_B5G6R5,               /** (86) Packed 16-bit, 5-bit blue, 6-bit green, 5-bit red. BGR byte order, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_R5G6B5,               /** (87) Packed 16-bit, 5-bit red, 6-bit green, 5-bit blue. RGB byte order, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_BGRA4,                /** (88) Packed 16-bit, 4-bit per channel (blue, green, red, alpha). BGRA byte order, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RGBA4,                /** (89) Packed 16-bit, 4-bit per channel (red, green, blue, alpha), unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_BGR5A1,               /** (90) Packed 16-bit, 5-bit blue, 5-bit green, 5-bit red, 1-bit alpha. BGRA byte order, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RGB5A1,               /** (91) Packed 16-bit, 5-bit red, 5-bit green, 5-bit blue, 1-bit alpha, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_RGB10A2,              /** (92) Packed 32-bit, 10-bit red, 10-bit green, 10-bit blue, 2-bit alpha, unsigned normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RGB10A2U,             /** (93) Packed 32-bit, 10-bit red, 10-bit green, 10-bit blue, 2-bit alpha, unsigned integer. 32 BPP. */
    BGFX_TEXTURE_FORMAT_RG11B10F,             /** (94) Packed 32-bit, 11-bit red, 11-bit green, 10-bit blue, unsigned floating point. No alpha. 32 BPP. */
    BGFX_TEXTURE_FORMAT_UNKNOWNDEPTH,         /** (95) Depth formats below.           */
    BGFX_TEXTURE_FORMAT_D16,                  /** (96) 16-bit depth, unsigned normalized. 16 BPP. */
    BGFX_TEXTURE_FORMAT_D24,                  /** (97) 24-bit depth, unsigned normalized (stored as 32-bit with 8 bits unused). 32 BPP. */
    BGFX_TEXTURE_FORMAT_D24S8,                /** (98) 24-bit depth, unsigned normalized, with 8-bit stencil. 32 BPP. */
    BGFX_TEXTURE_FORMAT_D32,                  /** (99) 32-bit depth, unsigned normalized. 32 BPP. */
    BGFX_TEXTURE_FORMAT_D16F,                 /** (100) 16-bit depth, floating point. 16 BPP. */
    BGFX_TEXTURE_FORMAT_D24F,                 /** (101) 24-bit depth, floating point (stored as 32-bit). 32 BPP. */
    BGFX_TEXTURE_FORMAT_D32F,                 /** (102) 32-bit depth, floating point. 32 BPP. */
    BGFX_TEXTURE_FORMAT_D32FS8,               /** (103) 32-bit depth, floating point, with 8-bit stencil (stored as 64-bit). 64 BPP. */
    BGFX_TEXTURE_FORMAT_D0S8,                 /** (104) 8-bit stencil only, no depth. 8 BPP. */

    BGFX_TEXTURE_FORMAT_COUNT

} bgfx_texture_format_t;
/**/
typedef uint16_t bgfx_view_id_t;
typedef struct bgfx_dynamic_index_buffer_handle_s { uint16_t idx; } bgfx_dynamic_index_buffer_handle_t;
typedef struct bgfx_dynamic_vertex_buffer_handle_s { uint16_t idx; } bgfx_dynamic_vertex_buffer_handle_t;
typedef struct bgfx_indirect_buffer_handle_s { uint16_t idx; } bgfx_indirect_buffer_handle_t;
typedef struct bgfx_program_handle_s { uint16_t idx; } bgfx_program_handle_t;
typedef struct bgfx_texture_handle_s { uint16_t idx; } bgfx_texture_handle_t;
/**
 * Set compute dynamic index buffer.
 *
 * @param[in] _stage Compute stage.
 * @param[in] _handle Dynamic index buffer handle.
 * @param[in] _access Buffer access. See `Access::Enum`.
 *
 */
BGFX_C_API void bgfx_set_compute_dynamic_index_buffer(uint8_t _stage, bgfx_dynamic_index_buffer_handle_t _handle, bgfx_access_t _access);
/**
 * Set compute dynamic vertex buffer.
 *
 * @param[in] _stage Compute stage.
 * @param[in] _handle Dynamic vertex buffer handle.
 * @param[in] _access Buffer access. See `Access::Enum`.
 *
 */
BGFX_C_API void bgfx_set_compute_dynamic_vertex_buffer(uint8_t _stage, bgfx_dynamic_vertex_buffer_handle_t _handle, bgfx_access_t _access);
/**
 * Set compute indirect buffer.
 *
 * @param[in] _stage Compute stage.
 * @param[in] _handle Indirect buffer handle.
 * @param[in] _access Buffer access. See `Access::Enum`.
 *
 */
BGFX_C_API void bgfx_set_compute_indirect_buffer(uint8_t _stage, bgfx_indirect_buffer_handle_t _handle, bgfx_access_t _access);
/**
 * Set compute image from texture.
 *
 * @param[in] _stage Compute stage.
 * @param[in] _handle Texture handle.
 * @param[in] _mip Mip level.
 * @param[in] _access Image access. See `Access::Enum`.
 * @param[in] _format Texture format. See: `TextureFormat::Enum`.
 *
 */
BGFX_C_API void bgfx_set_image(uint8_t _stage, bgfx_texture_handle_t _handle, uint8_t _mip, bgfx_access_t _access, bgfx_texture_format_t _format);
/**
 * Set compute image stage for draw primitive, selecting a sub-range of the
 * texture's array layers and mip levels.
 *
 * @param[in] _stage Compute stage.
 * @param[in] _handle Texture handle.
 * @param[in] _firstLayer First array layer.
 * @param[in] _numLayers Number of array layers.
 * @param[in] _mip Mip level.
 * @param[in] _access Image access. See `Access::Enum`.
 * @param[in] _format Texture format. See: `TextureFormat::Enum`.
 *
 */
BGFX_C_API void bgfx_set_image_view(uint8_t _stage, bgfx_texture_handle_t _handle, uint16_t _firstLayer, uint16_t _numLayers, uint8_t _mip, bgfx_access_t _access, bgfx_texture_format_t _format);
/**
 * Dispatch compute.
 *
 * @param[in] _id View id.
 * @param[in] _program Compute program.
 * @param[in] _numX Number of groups X.
 * @param[in] _numY Number of groups Y.
 * @param[in] _numZ Number of groups Z.
 * @param[in] _flags Discard or preserve states. See `BGFX_DISCARD_*`.
 *
 */
BGFX_C_API void bgfx_dispatch(bgfx_view_id_t _id, bgfx_program_handle_t _program, uint32_t _numX, uint32_t _numY, uint32_t _numZ, uint8_t _flags);
/**
 * Dispatch compute indirect.
 *
 * @param[in] _id View id.
 * @param[in] _program Compute program.
 * @param[in] _indirectHandle Indirect buffer.
 * @param[in] _start First element in indirect buffer.
 * @param[in] _num Number of dispatches.
 * @param[in] _flags Discard or preserve states. See `BGFX_DISCARD_*`.
 *
 */
BGFX_C_API void bgfx_dispatch_indirect(bgfx_view_id_t _id, bgfx_program_handle_t _program, bgfx_indirect_buffer_handle_t _indirectHandle, uint32_t _start, uint32_t _num, uint8_t _flags);
/**
 * Discard previously set state for draw or compute call.
 *
 * @param[in] _flags Draw/compute states to discard.
 *
 */
BGFX_C_API void bgfx_discard(uint8_t _flags);
/**
 * Blit 2D texture region between two 2D textures.
 *
 * @attention Destination texture must be created with `BGFX_TEXTURE_BLIT_DST` flag.
 * @attention Availability depends on: `BGFX_CAPS_TEXTURE_BLIT`.
 *
 * @param[in] _id View id.
 * @param[in] _dst Destination texture handle.
 * @param[in] _dstMip Destination texture mip level.
 * @param[in] _dstX Destination texture X position.
 * @param[in] _dstY Destination texture Y position.
 * @param[in] _dstZ If texture is 2D this argument should be 0. If destination texture is cube
 *  this argument represents destination texture cube face. For 3D texture this argument
 *  represents destination texture Z position.
 * @param[in] _src Source texture handle.
 * @param[in] _srcMip Source texture mip level.
 * @param[in] _srcX Source texture X position.
 * @param[in] _srcY Source texture Y position.
 * @param[in] _srcZ If texture is 2D this argument should be 0. If source texture is cube
 *  this argument represents source texture cube face. For 3D texture this argument
 *  represents source texture Z position.
 * @param[in] _width Width of region.
 * @param[in] _height Height of region.
 * @param[in] _depth If texture is 3D this argument represents depth of region, otherwise it's
 *  unused.
 *
 */
BGFX_C_API void bgfx_blit(bgfx_view_id_t _id, bgfx_texture_handle_t _dst, uint8_t _dstMip, uint16_t _dstX, uint16_t _dstY, uint16_t _dstZ, bgfx_texture_handle_t _src, uint8_t _srcMip, uint16_t _srcX, uint16_t _srcY, uint16_t _srcZ, uint16_t _width, uint16_t _height, uint16_t _depth);