bindings/py/bgfx.py

	bgfx_set_compute_dynamic_index_buffer.argtypes = [ctypes.c_uint8, DynamicIndexBufferHandle, ctypes.c_int]
	bgfx_set_compute_dynamic_index_buffer.restype = None
	global bgfx_set_compute_dynamic_vertex_buffer
	bgfx_set_compute_dynamic_vertex_buffer = lib.bgfx_set_compute_dynamic_vertex_buffer
	bgfx_set_compute_dynamic_vertex_buffer.argtypes = [ctypes.c_uint8, DynamicVertexBufferHandle, ctypes.c_int]
	bgfx_set_compute_dynamic_vertex_buffer.restype = None
	global bgfx_set_compute_indirect_buffer
	bgfx_set_compute_indirect_buffer = lib.bgfx_set_compute_indirect_buffer
	bgfx_set_compute_indirect_buffer.argtypes = [ctypes.c_uint8, IndirectBufferHandle, ctypes.c_int]
	bgfx_set_compute_indirect_buffer.restype = None
	global bgfx_set_image
	bgfx_set_image = lib.bgfx_set_image
	bgfx_set_image.argtypes = [ctypes.c_uint8, TextureHandle, ctypes.c_uint8, ctypes.c_int, ctypes.c_int]
	bgfx_set_image.restype = None
	global bgfx_set_image_view
	bgfx_set_image_view = lib.bgfx_set_image_view
	bgfx_set_image_view.argtypes = [ctypes.c_uint8, TextureHandle, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint8, ctypes.c_int, ctypes.c_int]
	bgfx_set_image_view.restype = None
	global bgfx_dispatch
	bgfx_dispatch = lib.bgfx_dispatch
	bgfx_dispatch.argtypes = [ctypes.c_uint16, ProgramHandle, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_dispatch.restype = None
	global bgfx_dispatch_indirect
	bgfx_dispatch_indirect = lib.bgfx_dispatch_indirect
	bgfx_dispatch_indirect.argtypes = [ctypes.c_uint16, ProgramHandle, IndirectBufferHandle, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_dispatch_indirect.restype = None
	global bgfx_discard
	bgfx_discard = lib.bgfx_discard
	bgfx_discard.argtypes = [ctypes.c_uint8]
	bgfx_discard.restype = None
	global bgfx_blit
	bgfx_blit = lib.bgfx_blit
	bgfx_blit.argtypes = [ctypes.c_uint16, TextureHandle, ctypes.c_uint8, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16, TextureHandle, ctypes.c_uint8, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16]
	bgfx_blit.restype = None
